--- a/history.html
+++ b/history.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- Stylesheet links -->
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/history.css">
+
+    <!-- Script links -->
+    <script src="scripts/objects/Clothing.js"></script>
+    <script src="scripts/objects/Task.js"></script>
+    <script src="scripts/history.js"></script>
+
+    <title>Statistics</title>
 </head>
 <body>
     
