finish html layout for index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,57 @@
     <title>Avatar</title>
 </head>
 <body>
+    <!-- background image -->
+    <img src="images/">
+
+    <!-- div for currency and daily -->
+    <div id="topUI">
+        <!-- box for currency -->
+        <div id="currencyBox">
+
+        </div>
+        <!-- box for dailies -->
+        <div id="dailyBox">
+
+        </div>
+    </div>
+
+    <!-- avatar image -->
+    <img src="images/Bunny.gif">
+
+    <!-- bottom navbar -->
+    <div id="footer">
+        <!-- clothing options -->
+        <a href="" id="clothingButton">
+            <img src="" id="clothingIcon"> 
+        </a> 
+        <a href="shop.html" id="shopButton">
+            <img src="" id="shopIcon">
+        </a>
+        <a href="history.html" id="historyButton">
+            <img src="" id="historyIcon">
+        </a>
+    </div>
+
+    <!-- pop-up for dailies -->
+    <dialog>
+        <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled>
+        <label for="physicalDaily"></label>
+        <button id="completePhysicalButton">Complete</button><br>
+        <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled>
+        <label for="mentalDaily"></label>
+        <button id="completePhysicalButton">Complete</button><br>
+    </dialog>
     
+    <!-- image section for clothing, requires manually adjustments in css (remove any thats too much) -->
+    <img id="hat">
+    <img id="scarf">
+    <img id="glasses">
+    <img id="necklaces">
+    <img id="shirts">
+    <img id="pants">
+    <img id="shoes">
+    <img id="gloves">
+
 </body>
 </html>
