add id to dialog box

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- pop-up for dailies -->
-    <dialog>
+    <dialog id="dailyScreen">
         <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled>
         <label for="physicalDaily"></label>
         <button id="completePhysicalButton">Complete</button><br>
