finish html layout for history

--- a/history.html
+++ b/history.html
@@ -16,6 +16,20 @@
     <title>Statistics</title>
 </head>
 <body>
-    
+    <!-- div for back button -->
+    <div id="topUI">
+        <!-- back button -->
+        <div id="backButton">
+            <a href="index.html">
+                <!-- back button picture -->
+                <img src="">
+            </a>
+        </div>
+    </div>
+
+    <!-- div for body of page -->
+    <div id="body">
+        <!-- fill actitivities here -->
+    </div>
 </body>
 </html>
