add extra comments

--- a/shop.html
+++ b/shop.html
@@ -35,6 +35,7 @@
     <div id="banner">
         <!-- image for banner picture -->
         <img src="">
+        <!-- div for pull buttons -->
         <div id="pullButtons">
             <button id="onePull" disabled>Pull x1 ($10)</button>
             <button id="tenPull" disabled>Pull x10 ($100)</button>
