--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Script links -->
     <script src="scripts/objects/Clothing.js"></script>
     <script src="scripts/objects/Task.js"></script>
+    <script src="scripts/constants/mentalTasks.js"></script>
+    <script src="scripts/constants/physicalTasks.js"></script>
     <script src="scripts/index.js"></script>
 
     <title>Avatar</title>
