add links to enums

--- a/shop.html
+++ b/shop.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="styles/shop.css">
 
     <!-- Script links -->
+    <script src="scripts/constants/ClothingTypeEnum.js"></script>
+    <script src="scripts/constants/colors.js"></script>
     <script src="scripts/objects/Clothing.js"></script>
     <script src="scripts/shop.js"></script>
 
