add icons and stand-in image for banner

--- a/shop.html
+++ b/shop.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- External links -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
     <!-- Stylesheet links -->
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/shop.css">
+    <link rel="stylesheet" href="styles/icons/backButton.css">
 
     <!-- Script links -->
     <script src="scripts/constants/ClothingTypeEnum.js"></script>
@@ -23,19 +27,20 @@
         <div id="backButton">
             <a href="index.html">
                 <!-- back button picture -->
-                <img src="">
+                <span class="material-symbols-outlined">arrow_back</span>
             </a>
         </div>
         <!-- box for currency -->
         <div id="currencyBox">
-
+            <span class="material-symbols-outlined">attach_money</span>
+            <p id="currency">0</p>
         </div>
     </div>
 
     <!-- div for banner -->
     <div id="banner">
         <!-- image for banner picture -->
-        <img src="">
+        <img src="https://i.redd.it/any-must-pulls-from-these-banners-v0-ypk7serfdqba1.png?width=1080&format=png&auto=webp&s=a813fbbd4429bfe051a85edbfa9675d9f4ab8df9">
         <!-- div for pull buttons -->
         <div id="pullButtons">
             <button id="onePull" disabled>Pull x1 ($10)</button>
