add currency populating

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <!-- Script links -->
     <script src="scripts/constants/mentalTasks.js"></script>
     <script src="scripts/constants/physicalTasks.js"></script>
-    <script src="scripts/constants/ClothingTypeEnum.js"></script>
+    <script src="scripts/constants/clothingType.js"></script>
     <script src="scripts/constants/TaskTypesEnum.js"></script>
     <script src="scripts/constants/colors.js"></script>
     <script src="scripts/objects/Clothing.js"></script>
     <script src="scripts/objects/Task.js"></script>
     <script src="scripts/index.js"></script>
+    <script src="scripts/currency.js"></script>
 
     <title>Avatar</title>
 </head>
