remove disable from buttons

--- a/shop.html
+++ b/shop.html
@@ -44,8 +44,8 @@
         <img src="https://i.redd.it/any-must-pulls-from-these-banners-v0-ypk7serfdqba1.png?width=1080&format=png&auto=webp&s=a813fbbd4429bfe051a85edbfa9675d9f4ab8df9">
         <!-- div for pull buttons -->
         <div id="pullButtons">
-            <button id="onePull" disabled>Pull x1 ($10)</button>
-            <button id="tenPull" disabled>Pull x10 ($100)</button>
+            <button id="onePull">Pull x1 ($10)</button>
+            <button id="tenPull">Pull x10 ($100)</button>
         </div>
     </div>
 
