removed new lines in dialog box

--- a/shop.html
+++ b/shop.html
@@ -53,10 +53,6 @@
     <p>10 pulls ($100) = 12 pulls</p>
 
     <!-- dialog for pulling -->
-    <dialog id="pullScreen">
-        <img id="pullResult">
-        <p id="pullResultMessage"></p>
-        <button id="interact"></button>
-    </dialog>
+    <dialog id="pullScreen"><img id="pullResult"><p id="pullResultMessage"></p><button id="interact"></button></dialog>
 </body>
 </html>
