Update footer, need to upload photos

--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@
     <div id="footer">
       <!-- clothing options -->
       <a href="" id="clothingButton">
-        <img src="" id="clothingIcon" />
+        <!-- <img src="" id="clothingIcon" /> -->
+        <p>Clothing</p>
       </a>
       <a href="shop.html" id="shopButton">
-        <img src="" id="shopIcon" />
+        <!-- <img src="" id="shopIcon" /> -->
+        <p>Shop</p>
       </a>
       <a href="history.html" id="historyButton">
-        <img src="" id="historyIcon" />
+        <!-- <img src="" id="historyIcon" /> -->
+        <p>History</p>
       </a>
     </div>
 
