add css file for checkmark

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- External Links -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
     <!-- Stylesheet links -->
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/index.css" />
@@ -47,15 +50,15 @@
       <!-- clothing options -->
       <a href="" id="clothingButton">
         <!-- <img src="" id="clothingIcon" /> -->
-        <p>Clothing</p>
+        <p><span class="material-symbols-outlined">apparel</span></p>
       </a>
       <a href="shop.html" id="shopButton">
         <!-- <img src="" id="shopIcon" /> -->
-        <p>Shop</p>
+        <p><span class="material-symbols-outlined">shopping_bag</span></p>
       </a>
       <a href="history.html" id="historyButton">
         <!-- <img src="" id="historyIcon" /> -->
-        <p>History</p>
+        <p><span class="material-symbols-outlined">monitoring</span></p>
       </a>
     </div>
 
