add css file for currency icon

--- a/shop.html
+++ b/shop.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/shop.css">
     <link rel="stylesheet" href="styles/icons/backButton.css">
+    <link rel="stylesheet" href="styles/icons/currency.css">
 
     <!-- Script links -->
     <script src="scripts/constants/clothingType.js"></script>
