Move pull description into banner box

--- a/shop.html
+++ b/shop.html
@@ -44,8 +44,9 @@
 
     <!-- div for banner -->
     <div id="middleUI">
-      <p>This is your mom</p>
       <div id="banner">
+        <!-- banner information -->
+        <h1>This is your mom</h1>
         <!-- image for banner picture -->
         <img
           id="bannerPhoto"
