--- a/history.html
+++ b/history.html
@@ -7,6 +7,12 @@
     <!-- Stylesheet links -->
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/history.css">
+    <!-- import poppin google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <!-- Script links -->
     <script src="scripts/history.js"></script>
@@ -27,7 +33,7 @@
 
     <!-- div for body of page -->
     <div id="body">
-        <!-- fill actitivities here -->
+        <!-- fill activities here -->
     </div>
 </body>
 </html>
