--- a/shop.html
+++ b/shop.html
@@ -16,6 +16,13 @@
     <link rel="stylesheet" href="styles/icons/backButton.css" />
     <link rel="stylesheet" href="styles/icons/currency.css" />
 
+        <!-- import poppin google font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+          href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
+
     <!-- Script links -->
     <script src="scripts/constants/clothingType.js"></script>
     <script src="scripts/constants/colors.js"></script>
