add populate currency

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       </div>
       <!-- box for dailies -->
       <div id="dailyBox">
-        <p><span class="material-symbols-outlined" id="alertIcon">priority_high</span><span class="material-symbols-outlined" id="checkIcon">done</span></p>
+        <span class="material-symbols-outlined" id="alertIcon">priority_high</span><span class="material-symbols-outlined" id="checkIcon">done</span>
+        <p id="currency">0</p>
       </div>
     </div>
 
