add click event

--- a/history.html
+++ b/history.html
@@ -33,14 +33,14 @@
         </div>
     </div>
     <!--  -->
-    <button id="btnA">Exercise</button>
-    <button id="btnB">Journal</button>
+    <button id="btnExercise">Exercise</button>
+    <button id="btnJournal">Journal</button>
     
-    <div id="contentA" class="content">
+    <div id="contentExercise" class="content">
         <p>This is Content A.</p>
     </div>
     
-    <div id="contentB" class="content">
+    <div id="contentJournal" class="content">
         <p>This is Content B.</p>
     </div>
 
