add header to daily screen

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 
     <!-- pop-up for dailies -->
     <dialog id="dailyScreen">
+      <div id="dailyScreenTopUI">
+        <h1>Dailies</h1>
+        <p id="breakTokens"><span class="material-symbols-outlined">skip_next</span>0</p>
+      </div>
       <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
       <label for="physicalDaily"></label>
       <button id="completePhysicalButton">Complete</button><br />
