Update css links

--- a/shop.html
+++ b/shop.html
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="styles/icons/backButton.css" />
     <link rel="stylesheet" href="styles/icons/currency.css" />
 
-        <!-- import poppin google font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-          href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
+    <!-- import poppin google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Script links -->
     <script src="scripts/constants/clothingType.js"></script>
@@ -54,12 +55,9 @@
       <div id="banner">
         <!-- banner information -->
         <h1>This is your mom</h1>
+
         <!-- image for banner picture -->
-        <img
-          id="bannerPhoto"
-          alt="Banner Photo"
-          src="https://i.redd.it/any-must-pulls-from-these-banners-v0-ypk7serfdqba1.png?width=1080&format=png&auto=webp&s=a813fbbd4429bfe051a85edbfa9675d9f4ab8df9"
-        />
+        <img id="bannerPhoto" alt="Banner Photo" src="./images/banner.png" />
       </div>
       <!-- div for pull buttons -->
       <div id="pullButtons">
