work on history page

--- a/history.html
+++ b/history.html
@@ -38,7 +38,7 @@
     <!--  -->
     <div class="buttonBox">
 
-        <button id="btnExercise" class="historyBtn">Exercise</button>
+        <button id="btnExercise" class="historyBtn activatedBtn">Exercise</button>
         <span class="btnDivider">|</span>
         <button id="btnJournal" class="historyBtn">Journal</button>
     </div>
