Add new div within pullScreen

--- a/shop.html
+++ b/shop.html
@@ -70,9 +70,11 @@
 
     <!-- dialog for pulling -->
     <dialog id="pullScreen">
-      <img id="pullResult" />
-      <p id="pullResultMessage"></p>
-      <button id="interact"></button>
+      <div id="pullScreenContainer">
+        <img id="pullResult" />
+        <p id="pullResultMessage"></p>
+        <button id="interact"></button>
+      </div>
     </dialog>
   </body>
 </html>
