--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/icons/statsIcon.css" />
     <link rel="stylesheet" href="styles/icons/clothesIcon.css" />
     <link rel="stylesheet" href="styles/icons/alertIcon.css" />
+    <link rel="stylesheet" href="styles/icons/backButton.css" />
 
     <!-- Script links -->
     <script src="scripts/constants/clothingType.js"></script>
@@ -78,7 +79,9 @@
     <dialog id="dailyScreen">
       <div id="dailyScreenTopUI">
         <h1>Dailies</h1>
-        <p id="breakTokens"><span class="material-symbols-outlined">skip_next</span>0</p>
+        <p id="breakTokens">
+          <span class="material-symbols-outlined">skip_next</span>0
+        </p>
       </div>
       <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
       <label for="physicalDaily"></label>
