Add background photo

--- a/shop.html
+++ b/shop.html
@@ -34,6 +34,11 @@
     <title>Shop</title>
   </head>
   <body>
+    <img
+      id="background"
+      src="./images/shop background.png"
+      alt="shop background"
+    />
     <!-- div for currency and back button -->
     <div id="topUI">
       <!-- back button -->
@@ -65,7 +70,7 @@
         <button id="tenPull">Pull x10 ($100)</button>
       </div>
       <!-- maybe integrate this into the banner art itself -->
-      <p>10 pulls ($100) = 12 pulls</p>
+      <p id="bonusPull">10 pulls ($100) = 12 pulls</p>
     </div>
 
     <!-- dialog for pulling -->
