Add background photo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <!-- background image -->
-    <img src="images/background" />
+    <img id="background" src="images/background.png" />
 
     <!-- div for currency and daily -->
     <div id="topUI">
