--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         <p id="breakTokens"><span class="material-symbols-outlined">skip_next</span>0</p>
       </div>
       <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
-      <label for="physicalDaily"></label>
-      <button id="completePhysicalButton">Complete</button><br />
+      <label for="physicalDaily">pull</label>
+      <button id="completePhysicalButton" class="completeBtn">Complete</button><br />
       <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
-      <label for="mentalDaily"></label>
-      <button id="completeMentalButton">Complete</button><br />
+      <label for="mentalDaily">journey</label>
+      <button id="completeMentalButton" class="completeBtn">Complete</button><br />
       <button id="closeButton">Close</button>
     </dialog>
 
