--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <div id="topUI">
       <!-- box for currency -->
       <div id="currencyBox">
-        <span class="material-symbols-outlined">attach_money</span>
+        <span id="shopDollarSign" class="material-symbols-outlined"
+          >attach_money</span
+        >
         <p id="currency">0</p>
       </div>
       <!-- box for dailies -->
@@ -86,7 +88,8 @@
       </div>
       <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
       <label for="physicalDaily">pull</label>
-      <button id="completePhysicalButton" class="completeBtn">Complete</button><br />
+      <button id="completePhysicalButton" class="completeBtn">Complete</button
+      ><br />
       <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
       <label for="mentalDaily">journey</label>
       <button id="completeMentalButton" class="completeBtn">Start</button><br />
