Update shop dollarSign in currencybox

--- a/shop.html
+++ b/shop.html
@@ -50,7 +50,9 @@
       </div>
       <!-- box for currency -->
       <div id="currencyBox">
-        <span class="material-symbols-outlined">attach_money</span>
+        <span id="shopDollarSign" class="material-symbols-outlined"
+          >attach_money</span
+        >
         <p id="currency">0</p>
       </div>
     </div>
