Update ten pull to 12 pull

--- a/shop.html
+++ b/shop.html
@@ -61,15 +61,16 @@
     <div id="middleUI">
       <div id="banner">
         <!-- banner information -->
-        <h1>This is your mom</h1>
+        <h1 id="clothes">Get Clothes for your Avatar!</h1>
+        <h1 id="pet">**If you're lucky, you can get a <span> Pet!</span>**</h1>
 
         <!-- image for banner picture -->
         <img id="bannerPhoto" alt="Banner Photo" src="./images/banner.png" />
       </div>
       <!-- div for pull buttons -->
       <div id="pullButtons">
-        <button id="onePull">Pull x1 ($10)</button>
-        <button id="tenPull">Pull x10 ($100)</button>
+        <button id="onePull">Pull x 1 ($10)</button>
+        <button id="tenPull">Pull x 12 ($100)</button>
       </div>
       <!-- maybe integrate this into the banner art itself -->
       <p id="bonusPull">10 pulls ($100) = 12 pulls</p>
