--- a/index.html
+++ b/index.html
@@ -58,8 +58,15 @@
 
     <!-- avatar image -->
     <div id="avatar">
-      <img src="images/Bunny.gif" />
+      <img src="images/character.png" id="characterImg" alt="character"/>
     </div>
+    <div id="top">
+
+    </div>
+    <div class="bottom">
+      
+    </div>
+    <img src="images/pants/pant.png" alt="pant"/>
 
     <!-- bottom navbar -->
     <div id="footer">
@@ -90,7 +97,7 @@
       <label for="physicalDaily">pull</label>
       <button id="completePhysicalButton" class="completeBtn">Complete</button
       ><br />
-      <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
+s      <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
       <label for="mentalDaily">journey</label>
       <button id="completeMentalButton" class="completeBtn">Start</button><br />
       <button id="closeButton">Close</button>
