add journal link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="scripts/objects/Task.js"></script>
     <script src="scripts/objects/PhysicalTask.js"></script>
     <script src="scripts/objects/MentalTask.js"></script>
+    <script src="scripts/journal.js"></script>
     <script src="scripts/dailies.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/currency.js"></script>
@@ -93,7 +94,7 @@
       ><br />
       <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
       <label for="mentalDaily" id="mentalDailyPrompt"></label>
-      <button id="completeMentalButton" class="completeBtn">Open Journal</button><br />
+      <button id="openJournalButton" class="completeBtn">Open Journal</button><br />
       <button id="closeButton">Close</button>
     </dialog>
 
