Add wardrobeScreen and update hat to hair

--- a/index.html
+++ b/index.html
@@ -121,8 +121,17 @@
       <button id="closeJournalButton">Finalize!</button>
     </dialog>
 
+    <!-- pop-up for wardrobe -->
+    <dialog id = "wardrobeScreen">
+      <div id="hairStyles"></div>
+      <div id="shirts"></div>
+      <div id="pants"></div>
+      <div id="shoes"></div>
+      <div id="pets"></div>
+    </dialog>
+
     <!-- image section for clothing, requires manually adjustments in css (remove any thats too much) -->
-    <img id="hat" />
+    <img id="hair" />
     <img id="shirts" />
     <img id="pants" />
     <img id="shoes" />
