--- a/index.html
+++ b/index.html
@@ -57,18 +57,20 @@
 
   <!-- avatar image -->
   <div id="avatar">
+    <div class="placeholder"></div>
     <div id="character" class="dressing">
       <img src="images/character.png" id="characterImg" alt="character" />
     </div>
+    
     <div id="shoes" class="dressing">
-      <img src="images/shoes/shoes.png" id="shoesImg" alt="shoes">
     </div>
-    <div id="bottom" class="dressing">
 
-      <img src="images/pants/shorts.png" id="shortsImg" alt="pant" />
+    <div id="bottom" class="dressing">
+      <img src="images/pants/shorts.png" id="shortsImg" alt="shorts" />
     </div>
+
     <div id="top" class="dressing">
-      <img src="images/shirts/Tshirt.png" id="TshirtImg" alt="Tshirt">
+      <img src="images/shirts/Tshirt.png" id="TshirtImg" alt="Tshirt" />
     </div>
   </div>
 
