--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="scripts/dailies.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/currency.js"></script>
+    <script src="scripts/clothes.js"></script>
 
     <title>Avatar</title>
   </head>
@@ -60,15 +61,11 @@
 
     <!-- avatar image -->
     <div id="avatar">
-      <img src="images/character.png" id="characterImg" alt="character"/>
+      <img src="images/character.png" id="characterImg" alt="character" />
     </div>
-    <div id="top">
-
-    </div>
-    <div class="bottom">
-      
-    </div>
-    <img src="images/pants/pant.png" alt="pant"/>
+    <div id="top"></div>
+    <div class="bottom"></div>
+    <!-- <img src="images/pants/pant.png" alt="pant" /> -->
 
     <!-- bottom navbar -->
     <div id="footer">
@@ -101,7 +98,8 @@
       ><br />
       <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
       <label for="mentalDaily" id="mentalDailyPrompt"></label>
-      <button id="openJournalButton" class="completeBtn">Open Journal</button><br />
+      <button id="openJournalButton" class="completeBtn">Open Journal</button
+      ><br />
       <button id="closeButton">Close</button>
     </dialog>
 
@@ -111,23 +109,42 @@
         <h1>Journal</h1>
       </div>
       <div id="moodDiv">
-        <button id="happyButton" class="moodButton"><span class="material-symbols-outlined">sentiment_satisfied</span></button>
-        <button id="neutralButton" class="moodButton"><span class="material-symbols-outlined">sentiment_neutral</span></button>
-        <button id="sadButton" class="moodButton"><span class="material-symbols-outlined">sentiment_dissatisfied</span></button>
+        <button id="happyButton" class="moodButton">
+          <span class="material-symbols-outlined">sentiment_satisfied</span>
+        </button>
+        <button id="neutralButton" class="moodButton">
+          <span class="material-symbols-outlined">sentiment_neutral</span>
+        </button>
+        <button id="sadButton" class="moodButton">
+          <span class="material-symbols-outlined">sentiment_dissatisfied</span>
+        </button>
       </div>
       <div id="journalScreenContent">
-        <textarea id="journalEntry" placeholder="Write your thoughts here..."></textarea>
+        <textarea
+          id="journalEntry"
+          placeholder="Write your thoughts here..."
+        ></textarea>
       </div>
       <button id="closeJournalButton">Finalize!</button>
     </dialog>
 
     <!-- pop-up for wardrobe -->
-    <dialog id = "wardrobeScreen">
-      <div id="hairStyles"></div>
-      <div id="shirts"></div>
-      <div id="pants"></div>
-      <div id="shoes"></div>
-      <div id="pets"></div>
+    <dialog id="wardrobeScreen">
+      <div id="hairStyles">
+        <p>Hair</p>
+      </div>
+      <div id="shirts">
+        <p>Shirts</p>
+      </div>
+      <div id="pants">
+        <p>Pants</p>
+      </div>
+      <div id="shoes">
+        <p>Shoes</p>
+      </div>
+      <div id="pets">
+        <p>Pets</p>
+      </div>
     </dialog>
 
     <!-- image section for clothing, requires manually adjustments in css (remove any thats too much) -->
