--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="character" class="dressing">
       <img src="images/character.png" id="characterImg" alt="character" />
     </div>
-    
+
     <div id="shoes" class="dressing">
     </div>
 
@@ -102,7 +102,9 @@
     </div>
     <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
     <label for="physicalDaily" id="physicalDailyPrompt"></label>
-    <button id="completePhysicalButton" class="completeBtn">Finished!</button><br />
+    <button id="completePhysicalButton" class="completeBtn">Finished!</button>
+    <br />
+    <hr class="dashed divider">
     <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
     <label for="mentalDaily" id="mentalDailyPrompt"></label>
     <button id="openJournalButton" class="completeBtn">Open Journal</button><br />
@@ -125,7 +127,7 @@
     <div id="journalScreenContent">
       <textarea id="journalEntry" placeholder="Write your thoughts here..."></textarea>
     </div>
-    <button id="closeJournalButton">Finalize!</button>
+    <button id="closeJournalButton">Complete!</button>
   </dialog>
 
     <!-- image section for clothing, requires manually adjustments in css (remove any thats too much) -->
