Add wardrobe css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Stylesheet links -->
     <link rel="stylesheet" href="styles/general.css" />
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/wardrobe.css" />
     <link rel="stylesheet" href="styles/icons/checkmark.css" />
     <link rel="stylesheet" href="styles/icons/currency.css" />
     <link rel="stylesheet" href="styles/icons/shopIcon.css" />
