--- a/history.html
+++ b/history.html
@@ -36,6 +36,7 @@
         </div>
     </div>
     <!--  -->
+    <h1 class="historyTitle">History</h1>
     <div class="buttonBox">
 
         <button id="btnExercise" class="historyBtn activatedBtn">Exercise</button>
