Create container for wardrobe

--- a/index.html
+++ b/index.html
@@ -142,11 +142,13 @@
 
     <!-- pop-up for clothes -->
     <dialog id="wardrobeScreen">
-      <div id="hairStyle">Hair</div>
-      <div id="shirt">Shirt</div>
-      <div id="pants">Pants</div>
-      <div id="shoe">Shoes</div>
-      <div id="pet">Pet</div>
+      <div id="wardrobeContainer">
+        <div id="hairStyle">Hair</div>
+        <div id="shirt">Shirt</div>
+        <div id="pants">Pants</div>
+        <div id="shoe">Shoes</div>
+        <div id="pet">Pet</div>
+      </div>
     </dialog>
 
     <!-- image section for clothing, requires manually adjustments in css (remove any thats too much) -->
