--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         <img src="images/shirts/Tshirt.png" id="TshirtImg" alt="Tshirt" />
       </div>
     </div>
+    <div id="pet">
+      <img src="images/pets/dog.png" alt="">
+    </div>
 
     <!-- bottom navbar -->
     <div id="footer">
