--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div id="pet">
-      <img src="images/pets/dog.png" alt="">
+      <img src="images/pets/dog.png" id="dog" alt="dog">
     </div>
 
     <!-- bottom navbar -->
