Update gatcha description

--- a/shop.html
+++ b/shop.html
@@ -61,7 +61,7 @@
     <div id="middleUI">
       <div id="banner">
         <!-- banner information -->
-        <h1 id="clothes">Get Clothes for your Avatar!</h1>
+        <h1 id="clothes">Get Coins or Clothes for your Avatar!</h1>
         <h1 id="pet">**If you're lucky, you can get a <span> Pet!</span>**</h1>
 
         <!-- image for banner picture -->
