add activated button effect

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
     <!-- pop-up for clothes -->
     <dialog id="wardrobeScreen">
       <div id="wardrobeContainer">
-        <div id="hairStyle">Hair</div>
-        <div id="shirt">Shirt</div>
-        <div id="pants">Pants</div>
-        <div id="shoe">Shoes</div>
-        <div id="pet">Pet</div>
+        <div id="hairStyleBtn" class="dressBtn activated">Hair</div>
+        <div id="shirtBtn" class="dressBtn">Shirt</div>
+        <div id="pantsBtn" class="dressBtn">Pants</div>
+        <div id="shoeBtn" class="dressBtn">Shoes</div>
+        <div id="petBtn" class="dressBtn">Pet</div>
       </div>
     </dialog>
 
@@ -167,5 +167,6 @@
     <img id="pants" />
     <img id="shoes" />
     <img id="pet" />
+        <script src="scripts/dressing.js"></script>
   </body>
 </html>
