Add new div in wardrobe

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div id="pet">
-      <img src="images/pets/dog.png" id="dog" alt="dog">
+      <img src="images/pets/dog.png" id="dog" alt="dog" />
     </div>
 
     <!-- bottom navbar -->
@@ -153,11 +153,14 @@
     <!-- pop-up for clothes -->
     <dialog id="wardrobeScreen">
       <div id="wardrobeContainer">
-        <div id="hairStyleBtn" class="dressBtn activated">Hair</div>
-        <div id="shirtBtn" class="dressBtn">Shirt</div>
-        <div id="pantsBtn" class="dressBtn">Pants</div>
-        <div id="shoeBtn" class="dressBtn">Shoes</div>
-        <div id="petBtn" class="dressBtn">Pet</div>
+        <div id="itemCategories">
+          <div id="hairStyleBtn" class="dressBtn activated">Hair</div>
+          <div id="shirtBtn" class="dressBtn">Shirt</div>
+          <div id="pantsBtn" class="dressBtn">Pants</div>
+          <div id="shoeBtn" class="dressBtn">Shoes</div>
+          <div id="petBtn" class="dressBtn">Pet</div>
+        </div>
+        <div id="items">asdf</div>
       </div>
     </dialog>
 
@@ -167,6 +170,6 @@
     <img id="pants" />
     <img id="shoes" />
     <img id="pet" />
-        <script src="scripts/dressing.js"></script>
+    <script src="scripts/dressing.js"></script>
   </body>
 </html>
