--- a/history.html
+++ b/history.html
@@ -45,7 +45,7 @@
     </div>
     <div class="historyBox">
         <div id="contentExercise" class="content">
-            <p>This is Content A.</p>
+            <p>YOU HAVE WORKED OUT FOR <span id="workOutDays">32</span> DAYS!</p>
         </div>
 
         <div id="contentJournal" class="content">
