--- a/index.html
+++ b/index.html
@@ -28,19 +28,7 @@
     <link rel="stylesheet" href="styles/icons/clothesIcon.css" />
     <link rel="stylesheet" href="styles/icons/alertIcon.css" />
 
-    <!-- Script links -->
-    <script src="scripts/constants/clothingType.js"></script>
-    <script src="scripts/constants/taskConstants.js"></script>
-    <script src="scripts/constants/colors.js"></script>
-    <script src="scripts/objects/Clothing.js"></script>
-    <script src="scripts/objects/Task.js"></script>
-    <script src="scripts/objects/PhysicalTask.js"></script>
-    <script src="scripts/objects/MentalTask.js"></script>
-    <script src="scripts/journal.js"></script>
-    <script src="scripts/dailies.js"></script>
-    <script src="scripts/index.js"></script>
-    <script src="scripts/currency.js"></script>
-    <script src="scripts/clothes.js"></script>
+
 
     <title>Avatar</title>
   </head>
@@ -131,7 +119,7 @@
         <h1>Journal</h1>
       </div>
       <div id="moodDiv">
-        <button id="happyButton" class="moodButton">
+        <button id="happyButton" class="moodButton moodSelected">
           <span class="material-symbols-outlined">sentiment_satisfied</span>
         </button>
         <button id="neutralButton" class="moodButton">
@@ -167,6 +155,20 @@
     <img id="pants" />
     <img id="shoes" />
     <img id="pet" />
-        <script src="scripts/dressing.js"></script>
+    
+        <!-- Script links -->
+    <script src="scripts/constants/clothingType.js"></script>
+    <script src="scripts/constants/taskConstants.js"></script>
+    <script src="scripts/constants/colors.js"></script>
+    <script src="scripts/objects/Clothing.js"></script>
+    <script src="scripts/objects/Task.js"></script>
+    <script src="scripts/objects/PhysicalTask.js"></script>
+    <script src="scripts/objects/MentalTask.js"></script>
+    <script src="scripts/journal.js"></script>
+    <script src="scripts/dailies.js"></script>
+    <script src="scripts/index.js"></script>
+    <script src="scripts/currency.js"></script>
+    <script src="scripts/clothes.js"></script>
+    <script src="scripts/dressing.js"></script>
   </body>
 </html>
