--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
     <link rel="stylesheet" href="styles/icons/clothesIcon.css" />
     <link rel="stylesheet" href="styles/icons/alertIcon.css" />
 
-
-
     <title>Avatar</title>
   </head>
 
@@ -148,7 +146,19 @@
           <div id="shoeBtn" class="dressBtn">Shoes</div>
           <div id="petBtn" class="dressBtn">Pet</div>
         </div>
-        <div id="items">asdf</div>
+        <div id="items">
+          <img
+            src="images/wardrobe/hair small.png"
+            style="
+              width: 20%;
+              border: solid 1px #5a3dbd;
+              margin: 5px;
+              border-radius: 5px;
+              filter: grayscale(100%);
+              opacity: 0.3;
+            "
+          />
+        </div>
       </div>
     </dialog>
 
@@ -158,9 +168,8 @@
     <img id="pants" />
     <img id="shoes" />
     <img id="pet" />
-<<<<<<< HEAD
-    
-        <!-- Script links -->
+
+    <!-- Script links -->
     <script src="scripts/constants/clothingType.js"></script>
     <script src="scripts/constants/taskConstants.js"></script>
     <script src="scripts/constants/colors.js"></script>
@@ -173,8 +182,6 @@
     <script src="scripts/index.js"></script>
     <script src="scripts/currency.js"></script>
     <script src="scripts/clothes.js"></script>
-=======
->>>>>>> c3f670b406561701bd5313c0d93d7e6fd18abbc8
     <script src="scripts/dressing.js"></script>
   </body>
 </html>
