update history page

--- a/history.html
+++ b/history.html
@@ -49,7 +49,10 @@
         </div>
 
         <div id="contentJournal" class="content">
-            <p>This is Content B.</p>
+            <button id="happyButton" class="moodButton moodSelected">
+                <span class="material-symbols-outlined">sentiment_satisfied</span>
+            </button>
+            <p>Today I made a new friend! Happy happy!</p>
         </div>
     </div>
 
