--- a/index.html
+++ b/index.html
@@ -148,14 +148,12 @@
         </div>
         <div id="items">
           <img
-            src="images/wardrobe/hair small.png"
+            src="images/wardrobe/bald small.png"
             style="
               width: 20%;
               border: solid 1px #5a3dbd;
               margin: 5px;
               border-radius: 5px;
-              filter: grayscale(100%);
-              opacity: 0.3;
             "
           />
         </div>
