--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
               border-radius: 5px;
             "
           />
+          <img
+            src="images/wardrobe/hair small.png"
+            style="
+              width: 20%;
+              border: solid 1px #5a3dbd;
+              margin: 5px;
+              filter: grayscale(100%);
+              opacity: 0.3;
+              border-radius: 5px;
+            "
+          />
         </div>
       </div>
     </dialog>
