update history page

--- a/history.html
+++ b/history.html
@@ -49,10 +49,25 @@
         </div>
 
         <div id="contentJournal" class="content">
-            <button id="happyButton" class="moodButton moodSelected">
-                <span class="material-symbols-outlined">sentiment_satisfied</span>
-            </button>
-            <p>Today I made a new friend! Happy happy!</p>
+
+            <div class="eachJournal">
+                <button id="happyButton" class="moodButton moodSelected">
+                    <span class="material-symbols-outlined">sentiment_satisfied</span>
+                </button>
+                <p>Today I made a new friend! Happy happy!</p>
+            </div>
+            <div class="eachJournal">
+                <button id="happyButton" class="moodButton moodSelected">
+                    <span class="material-symbols-outlined">sentiment_neutral</span>
+                </button>
+                <p>Rainy Day. </p>
+            </div>
+            <div class="eachJournal">
+                <button id="happyButton" class="moodButton moodSelected">
+                    <span class="material-symbols-outlined">sentiment_dissatisfied</span>
+                </button>
+                <p>I broke my bike. Have to stay at home this weekend. :(</p>
+            </div>
         </div>
     </div>
 
