--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="scripts/dailies.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/currency.js"></script>
+    <script src="scripts/breakTokens.js"></script>
     <script src="scripts/clothes.js"></script>
 
     <title>Avatar</title>
@@ -53,9 +54,7 @@
     <div id="topUI">
       <!-- box for currency -->
       <div id="currencyBox">
-        <span id="shopDollarSign" class="material-symbols-outlined"
-          >attach_money</span
-        >
+        <span id="shopDollarSign" class="material-symbols-outlined">attach_money</span>
         <p id="currency">0</p>
       </div>
       <!-- box for dailies -->
@@ -110,19 +109,21 @@
     <dialog id="dailyScreen">
       <div id="dailyScreenTopUI">
         <h1>Dailies</h1>
-        <p id="breakTokens">
-          <span class="material-symbols-outlined">skip_next</span>0
-        </p>
+        <span class="material-symbols-outlined">skip_next</span>
+        <p id="breakTokens"></p>
       </div>
-      <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
-      <label for="physicalDaily" id="physicalDailyPrompt"></label>
-      <button id="completePhysicalButton" class="completeBtn">Finished!</button
-      ><br />
-      <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
-      <label for="mentalDaily" id="mentalDailyPrompt"></label>
-      <button id="openJournalButton" class="completeBtn">Open Journal</button
-      ><br />
-      <button id="closeButton">Close</button>
+      <button id="skipDailyButton">Skip Dailies</button>
+      <div id="tasksDiv">
+        <input type="checkbox" id="physicalDaily" name="physicalDaily" disabled />
+        <label for="physicalDaily" id="physicalDailyPrompt"></label>
+        <button id="completePhysicalButton" class="completeBtn">Finished!</button
+        ><br />
+        <input type="checkbox" id="mentalDaily" name="mentalDaily" disabled />
+        <label for="mentalDaily" id="mentalDailyPrompt"></label>
+        <button id="openJournalButton" class="completeBtn">Open Journal</button
+        ><br />
+        <button id="closeButton">Close</button>
+      </div>
     </dialog>
 
     <!-- pop-up for journal -->
