--- a/shop.html
+++ b/shop.html
@@ -28,6 +28,7 @@
     <script src="scripts/constants/clothingType.js"></script>
     <script src="scripts/objects/Clothing.js"></script>
     <script src="scripts/shop.js"></script>
+    <script src="scripts/pulls.js"></script>
     <script src="scripts/currency.js"></script>
 
     <title>Shop</title>
